[package]
name = "simple-price-db"
version = "0.1.0"
authors = ["q@bandprotocol.com"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = { version = "0.16.2" }
cosmwasm-storage = { version = "0.16.2" }
schemars = "0.8.3"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.67"
snafu = { version = "0.6.10" }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.2" }
